# NetBox

./: .dockerignore  1.py  1.sh  CMakeLists.txt  DOCKER_DEPLOYMENT_SUMMARY.md  DOCKER_README.md  Dockerfile  Dockerfile.dev  Dockerfile.minimal  INTERVIEW.md  LICENSE  PREVIEW.md  README.md  WINDOWS_BUILD_GUIDE.md  client_test  client_test.cpp  count_code.py  docker-build.bat  docker-build.sh  docker-compose.dev.yml  docker-compose.yml  fix-docker-network.bat  fix_encoding.bat  install_netbox.sh  install_netbox_global.sh  main.cpp  netbox.bat  netbox.json  netbox.ps1  netbox_simple.bat  optimize_system.sh  test-docker.bat  test-dual-services.bat  test-simple.bat  test_async_logger  valgrind.supp  windows_troubleshoot.bat  开发者模式说明.md  项目质量总结.md
AnimatedProject/: CMakeLists.txt  README.md
AnimatedProject/examples/basic/: simple_example.cpp
AnimatedProject/src/: main.cpp
BinTest/: CMakeLists.txt  README.md
BinTest/NetFramework/include/app/: ApplicationRegistry.h
BinTest/NetFramework/include/base/: DoubleLockThreadPool.h  IOMultiplexer.h  Logger.h
BinTest/NetFramework/include/monitoring/: MetricsCollector.h
BinTest/NetFramework/include/platform/: WindowsPlatform.h
BinTest/NetFramework/src/base/: AsyncConsoleLogger.cpp  ThreadPool.cpp
BinTest/NetFramework/src/util/: EnhancedConfigReader.cpp
BinTest/Protocol/include/: HttpProtocol.h  PureRedisProtocol.h
BinTest/config/: config.yaml  config_redis_app.yaml  config_test_error.yaml
BinTest/examples/: custom_protocol_example.cpp
BinTest/examples/basic/: simple_example.cpp
BinTest/include/netbox/: NetBox.h
BinTest/src/: main.cpp
BinTest/tests/: simple_test.cpp
BinTest2/: CMakeLists.txt  README.md  core_CMakeLists.txt
BinTest2/NetFramework/include/IO/: PollMultiplexer.h  SelectMultiplexer.h
BinTest2/NetFramework/include/base/: SpdlogLogger.h  ThreadPool.h
BinTest2/NetFramework/include/util/: EnhancedConfigReader.h
BinTest2/Protocol/src/: HttpProtocol.cpp  ProtocolBase.cpp  PureRedisProtocol.cpp
BinTest2/config/: config_direct_redis.yaml  config_echo.yaml
BinTest2/examples/basic/: simple_example.cpp
BinTest2/include/netbox/: NetBox.h
BinTest2/scripts/: build_windows.bat
BinTest2/src/: main.cpp
BinTest2/tests/: simple_test.cpp
NetBox/: CMakeLists.txt  CUSTOMIZE_EXAMPLE.md  GLOBAL_INSTALL.md  Makefile.tests  TEMPLATE_CUSTOMIZATION.md  cleanup_project.sh  echo问题.md  install.sh  main.cpp  netbox  quick_build.bat  select与epoll性能比较.md  test.py  uninstall_netbox.sh
NetBox/.github/workflows/: tests.yml
NetBox/BinTest2/config/: config_redis.yaml
NetBox/BinTest2/examples/: custom_protocol_example.cpp
NetBox/Protocol/include/: ProtocolBase.h  ProtocolFactory.h
NetBox/Protocol/src/: RedisProtocol.cpp
NetBox/SimpleEchoServer/docs/: 开发指南.md
NetBox/SimpleEchoServer/examples/: CMakeLists.txt  hello_world
NetBox/TestProject/docs/: 开发指南.md
NetBox/TestProject/examples/: CMakeLists.txt
NetBox/app/include/: ApplicationServer.h  RedisApplicationServer.h
NetBox/app/src/: RedisApplicationServer.cpp
NetBox/build_linux/: CTestTestfile.cmake  Makefile  cmake_install.cmake
NetBox/client/: CMakeCache.txt  cmake_install.cmake  echo_client.cpp
NetBox/config/: config.txt
NetBox/docs/: CLI使用指南.md  CLI使用示例.sh  CLI快速参考.md  NetBox_v2.0_重构报告.md  NetBox_简洁命令使用指南.md  NetBox脚手架完整使用文档.md  Simple_Redis_快速参考.md  快速入门指南.md  插件化框架升级报告.md  文档索引.md  项目总结.md  项目结构说明.md
NetBox/docs/getting-started/: 快速开始指南.md
NetBox/docs/协议层文档/: 协议扩展指南.md  改进总结.md
NetBox/docs/性能优化/: 注释改进说明.md
NetBox/docs/测试指南/: 测试最佳实践.md  问题发现与解决过程.md
NetBox/docs/跨平台支持/: 跨平台实现总结.md  跨平台架构设计.md
NetBox/docs/重要更新/: 性能测试实际结果.md
NetBox/docs/面试准备/: 跨平台技术面试指南.md  项目重点.md
NetBox/docs/项目总览/: 技术细节说明.md
NetBox/include/: server.h
NetBox/plugins/redis/: DirectRedisPlugin.cpp  RedisApplicationPlugin.cpp
NetBox/src/: server.cpp
NetBox/tests/: README.md
NetBox/tests/performance/: test_io_performance.cpp
NetBox/tools/: ai_assistant.py  enhanced_netbox_cli.py  error_handler.py  template_customizer.py
Server/: CMakeLists.txt
Server/include/: Tcp_Server.h
Server/src/: Tcp_Server.cpp  main.cpp
SimpleEchoServer/: CMakeLists.txt
SimpleEchoServer/examples/: hello_world.cpp
SimpleEchoServer/examples/basic/: simple_server.cpp
TestProject/: CMakeLists.txt
TestProject/examples/basic/: simple_server.cpp
TestProject/include/netbox/: NetBox.h
base_tool/: CMakeLists.txt
base_tool/include/: EpollManger.h  ReadConfig.h  thread_pool.h
base_tool/src/: EpollManger.cpp  ReadConfig.cpp  thread_pool.cpp
tests/: CMakeLists.txt  run_benchmark.sh  run_tests.sh  test_heartbeat_filter.cpp  test_heartbeat_integration.cpp  test_redis_commands.cpp  test_smart_client.sh
tests/include/: test_utils.h
tests/integration/: test_echo_integration.cpp  test_protocol_integration.cpp  test_redis_integration.cpp
tests/performance/: test_framework_benchmark.cpp  test_protocol_performance.cpp  test_thread_pool_performance.cpp
tests/unit/app/: test_application_registry.cpp  test_application_server.cpp  test_echo_server.cpp  test_redis_application_server.cpp
tests/unit/base/: test_async_logger.cpp  test_double_lock_thread_pool.cpp  test_logger.cpp  test_thread_pool.cpp
tests/unit/io/: test_epoll_multiplexer.cpp  test_io_multiplexer.cpp  test_poll_multiplexer.cpp  test_select_multiplexer.cpp
tests/unit/platform/: test_cross_platform.cpp
tests/unit/protocol/: test_protocol_base.cpp
tests/unit/server/: test_tcp_server.cpp
tests/unit/util/: test_config_reader.cpp  test_enhanced_config_reader.cpp
tools/: CMakeLists.txt  README_STRESS_TEST.md  analysis_suite.sh  apply_custom_template.py  ascii_art.py  benchmark_client.cpp  flamegraph_analysis.sh  memory_check.sh  netbox-cli-v2.py  netbox-cli-v2.py.backup  netbox-cli.py  progress_showcase.py  quick_test.sh  stress_test.sh  stress_test_echo.cpp  template_config.json  test_netbox_cli.py  test_profiles.yaml
tools/templates/framework/: CMakeLists.txt.j2  hello_world.cpp.j2  main_header.h.j2  project_config.json.j2
tools/templates_v2/: README.md
tools/templates_v2/standard/: template.json
(+180 files in other folders)
